# haj

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  install-public.sh  install.sh
ci/: github.sh
completions/: _haj  haj.bash
docs/: builtins.md  config.md  secrets.md  trees.md  writing-commands.md
examples/: README.md
examples/.haj/commands/: deploy
src/: aliases.rs  builtin.rs  cache.rs  completion.rs  config.rs  contract.rs  discovery.rs  docs.rs  main.rs  profile.rs  project.rs  secret.rs  secrets.rs  selfupgrade.rs  store.rs  tasks.rs  tree.rs
tests/: cli.rs  secrets.rs
